-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.0.0, Lustre 2.1.0
-
None
Version 1.8 uses a tunable named "mdt.quota_type" in order to store quota parameters in config, while version 2.x has a tunable named "mdd.quota_type" for the same purpose. This introduces incompatibility when trying to run a 2.x Lustre instance on top of a filesystem with a 1.8 disk format.
- Trackbacks
-
Changelog 2.1
Changes from version 2.1.0 to version 2.1.1 Server support for kernels: 2.6.18274.12.1.el5 (RHEL5) 2.6.32220.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.12.1.el5 (RHEL5) 2.6.32220.el6 (RHEL6) 2.6.32.360....
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....