LU-110 Old-style quota type handling fix

Version 1.8 uses a tunable named "mdt.quota_type" in order to store
quota parameters in config, while version 2.x has a tunable named
"mdd.quota_type" for the same purpose. This introduces incompatibility
when trying to run a 2.x Lustre instance on top of a filesystem with a
1.8 disk format.

Change-Id: I5176c19d1047101650d638a1a0596d091e8cf1d6
Signed-off-by: Alexey Lyashkov <Alexey_Lyashkov@xyratex.com>
Signed-off-by: Vitaly Fertman <vitaly_fertman@xyratex.com>